# task-processor

./: .gitignore  Cargo.toml  LICENSE  README.md
interface/: Cargo.toml
interface/src/: lib.rs
plugins/fibonacci/: Cargo.toml
plugins/fibonacci/src/: lib.rs
plugins/mul/: Cargo.toml
plugins/mul/src/: lib.rs
plugins/sum/: Cargo.toml
plugins/sum/src/: lib.rs
server/: Cargo.toml
server/src/: app.rs  database.rs  main.rs  plugin.rs  task.rs
