[package]
name = "server"
version = "0.1.0"
authors = ["Andrey Kononov <flowneee3@gmail.com>"]
edition = "2018"

[dependencies]
interface = { path = "../interface" }
libloading = "0.5"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.6"
clap = "2.33"
actix-web = "1.0.0"
futures = "0.1"
tokio = "*"
